# sgp4-propagator-sdn-plugin

./: .gitmodules  README.md  plugin-manifest.json
src/cpp/: CMakeLists.txt  wasm_api.cpp
src/cpp/include/sgp4_prop/: lambert_stm.h  propagator.h
src/cpp/src/: gp_parser.cpp  lambert_stm.cpp  propagator.cpp
src/cpp/tests/: test_lambert_stm.cpp  test_propagator.cpp
